--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://nir.moe
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :lang/:title/
 permalink_defaults:
 
 # Directory
@@ -30,7 +30,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: :lang/:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
@@ -119,3 +119,20 @@ algolia:
     - categories
     - excerpt
     - excerpt:strip
+
+index_generator:
+  per_page: 5
+  order_by: -date
+
+archive_generator:
+  per_page: 3
+  yearly: true
+  monthly: true
+  daily: false
+
+category_generator:
+  per_page: 5
+
+tag_generator:
+   per_page: 5
+   enable_index_page: false
