--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hexo-deployer-rsync": "^0.1.3",
     "hexo-deployer-sftp": "^0.1.0",
     "hexo-generator-archive": "^0.1.5",
+    "hexo-generator-basic-set": "^0.1.1",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
@@ -20,7 +21,6 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
-    "hexo-katex": "0.0.8",
     "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
