--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://nir.moe
 root: /
-permalink: :lang/:title/
+permalink: posts/:title/
 permalink_defaults:
 
 # Directory
@@ -30,7 +30,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :lang/:title.md # File name of new posts
+new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
@@ -42,7 +42,7 @@ future: true
 highlight:
   enable: true
   line_number: false
-  auto_detect: true
+  auto_detect: false
   tab_replace: 
 
 # Category & Tag
@@ -81,13 +81,6 @@ math:
         config:
             # default config
 
-feed:
-    type: rss2
-    path: rss2.xml
-    limit: 3
-    content: true
-    hub:
-
 # sitemap
 ## path: sitemap path
 ## template: custom template path. This file will be used to generate sitemap.xml
@@ -101,6 +94,11 @@ deploy:
   host: mjol.nir.moe
   user: noma
   root: /home/noma/www/blog/
+#deploy:
+#  type: git   
+#  repo: git@github.com:noirgif/blog
+#  branch: gh-pages #published
+#  message:
 
 
 # algolia search
@@ -120,6 +118,7 @@ algolia:
     - excerpt
     - excerpt:strip
 
+
 index_generator:
   per_page: 5
   order_by: -date
@@ -136,3 +135,11 @@ category_generator:
 tag_generator:
    per_page: 5
    enable_index_page: false
+  
+feed:
+  type: rss2
+  path: rss2.xml
+  limit: 3
+  hub:
+  content: true
+  order_by: -date
