--- a/package.json
+++ b/package.json
@@ -3,29 +3,36 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.3"
+    "version": "3.8.0"
   },
   "dependencies": {
-    "algoliasearch": "^3.24.8",
-    "hexo": "^3.4.3",
-    "hexo-algoliasearch": "^0.2.3",
-    "hexo-cli": "^1.0.4",
+    "algoliasearch": "^3.31.0",
+    "cloudinary": "^1.13.2",
+    "deepmerge": "^2.2.1",
+    "hexo": "^3.8.0",
+    "hexo-algoliasearch": "^0.3.0",
+    "hexo-cli": "^1.1.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-deployer-rsync": "^0.1.3",
     "hexo-deployer-sftp": "^0.1.0",
+    "hexo-generator-alias": "^0.1.3",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-basic-set": "^0.1.1",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
-    "hexo-generator-search": "^2.1.1",
+    "hexo-generator-multilingual-feed": "^1.2.2",
+    "hexo-generator-search": "^2.3.0",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
     "hexo-math": "^3.0.4",
+    "hexo-multilingual": "^0.6.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2",
-    "katex": "^0.9.0-alpha2"
+    "highlight.js": "^9.13.1",
+    "katex": "^0.9.0"
   }
 }
