--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             - v1-dependencies-
 
       - run: sudo npm install hexo@3.8.0
-      - run: npm install --save
+      - run: npm install
 
       - save_cache:
           paths:
