--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,15 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
 
-      - run: sudo npm install hexo@3.8.0
-      - run: npm install
+      - run: sudo npm install hexo-cli@3.8.0 -g
+      - run: npm install --save
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: hexo deploy --generate
+      - run: node_modules/hexo-cli deploy --generate
 
       - add_ssh_keys:
           fingerprints:
