--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "hexo-math": "^3.0.4",
     "hexo-multilingual": "^0.6.0",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2",
     "highlight.js": "^9.13.1",
