--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2",
     "highlight.js": "^9.13.1",
+    "jquery": "^3.4.0",
     "jsdom": "^15.0.0",
     "katex": "^0.9.0"
   }
