--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: sudo apt install -y rsync
+      - run: git config --global user.email "nomaru@outlook.com"
+      - run: git config --global user.name "noirgif(circleci)"
       - run: node_modules/.bin/hexo deploy --generate
 
       - add_ssh_keys:
