Try to restore theme

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - checkout
+      - run: mkdir -p themes
+      - run: git clone git@git.io:noirgif/tranquilpeak themes/tranquilpeak 
 
       - restore_cache:
           keys:
