--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,10 @@ jobs:
       - run: sudo apt install -y rsync
       - run: git config --global user.email "nomaru@outlook.com"
       - run: git config --global user.name "noirgif(circleci)"
+
+      - run: 
+          name: netlify
+          command: mv netlify/* public/
       - add_ssh_keys:
           fingerprints:
             - "08:1b:c0:8c:b3:c1:6b:24:17:8d:7c:3f:a1:a4:66:a9"
