--- a/_config.yml
+++ b/_config.yml
@@ -97,9 +97,9 @@ deploy:
 
 # algolia search
 algolia:
-  appId: "Z7A3XW4R2I"
-  apiKey: "12db1ad54372045549ef465881c17e743"
-  adminApiKey: "40321c7c207e7f73b63a19aa24c4761b"
+  appId: "4VZ5FRVLMP"
+  apiKey: "1040be093d539de0ea08b83ce51244f9"
+  adminApiKey: "5c2541cd8affeca1f5ea545c0d9690f8"
   chunkSize: 5000
   indexName: "tranquilpeak"
   fields:
