--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hexo-generator-sitemap": "2.2.0",
     "hexo-generator-tag": "1.0.0",
     "hexo-inject": "1.0.0",
-    "hexo-math": "3.0.4",
+    "hexo-math": "^4.0.0",
     "hexo-multilingual": "0.6.0",
     "hexo-renderer-ejs": "2.0.0",
     "hexo-renderer-markdown-it": "7.0.0",
