--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "hexo-server": "1.0.0",
     "highlight.js": "10.7.3",
     "jquery": "3.6.4",
-    "jsdom": "16.7.0",
-    "katex": "0.11.1"
+    "jsdom": "16.7.0"
   }
 }
