--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -14,10 +14,8 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "category", name: "category", widget: "string", default: "writing"}
+      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss"}
+      - {label: "category", name: "category", widget: "list", default: ["writing"]}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "lang", name: "lang", widget: "select", options: ["zh-cn", "en", "ja-jp"], default: "zh-cn"}
-      - {label: "label", name: "label", widget: "string", default: "{{slug}}"}
       - {label: "Body", name: "body", widget: "markdown"}
