--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "7.2.0"
+    "version": "7.3.0"
   },
   "dependencies": {
     "algoliasearch": "4.24.0",
@@ -28,8 +28,10 @@
     "hexo-renderer-markdown-it": "7.1.1",
     "hexo-renderer-stylus": "3.0.1",
     "hexo-server": "3.0.0",
+    "hexo-util": "^3.3.0",
     "highlight.js": "11.10.0",
     "jquery": "3.7.1",
-    "jsdom": "24.1.0"
+    "jsdom": "24.1.0",
+    "strip-indent": "^4.0.0"
   }
 }
